<resources>
    <string name="app_name">FERRESIX</string>

    // Activity main
    <string name="Geo">Geo</string>
    <string name="splashScreen">Screen</string>
    <string name="botonProductos">Info</string>
    <string name="imgTienda">FERRESIX</string>

    <string name="txtCategoria">Categorías</string>
    <string name="imgCat">imgCategoria</string>
    <string name="imgCarrito">Carrito</string>
    <string name="txtMaterial">Material de Construcción</string>

    <string name="txtCables">Electricidad</string>
    <string name="imgHerramienta">Herramienta</string>
    <string name="txtHerramienta">Herramientas</string>

    // Productos
    <string name="imgAtras">Atras</string>
    <string name="categoria">Categoria</string>
    <string name="imgProductos">Productos</string>

    //Formulario
    <string name="agregarProducto">Agregar Producto</string>
    <string name="imgAgregar">Agregar Imagen</string>
    <string name="insAgregarNombre">Producto</string>
    <string name="insAgregarDescripcion">Descripcion del Producto</string>
    <string name="insAgregarPrecio">Precio</string>
    <string name="botonAgregar">Agregar</string>

    //menu productos

    <string name="agregar">Agregar</string>
    <string name="eliminar">Eliminar</string>
    <string name="Actualizar">Actualizar</string>

    //informacion
    <string name="id">id</string>

    //Spinner
    <string-array name="Opciones">
        <item>Elige una opcion</item>
        <item>Actualizar</item>
        <item>Eliminar</item>
    </string-array>

    //Login y registro
    <string name="imglogin">imgLogin</string>
    <string name="imgReg">imgReg</string>
    <string name="insEmailReg">Ingrese su Email</string>
    <string name="insEmail">Ingrese su Email</string>
    <string name="insContrasena">Ingrese su Contraseña</string>
    <string name="insContrasenaReg">Ingrese su Contraseña</string>
    <string name="btnIngresar">Ingresar</string>
    <string name="btnRegistrarReg">Registrar</string>
    <string name="btnRegistrar">Registrar</string>
    <string name="insConfirmarContra">Confirmar Contraseña</string>
    <string name="menuLogin">Ingresar</string>
    <string name="menuSalir">Salir</string>

    //Agregar categorias
    <string name="imgAddCat">IMAGEN CATEGORIA</string>
    <string name="txtAddCat">Categoria nueva</string>
    <string name="imgCatBut">Boton Categoria</string>
    <string name="agregarCategoria">Agregar Categoria</string>
    <string name="btnActuaCat">Actualizar categoria</string>
    <string name="spinnerCategorias">spinnerCategorias</string>

    //Mapas
    <string name="textbognor">Punto de venta ubicado en la zona norte de la ciudad de Bogota</string>
    <string name="textbogsur">Punto de venta ubicado en la zona sur de la ciudad de Bogota</string>
    <string name="textbogocc">Punto de venta ubicado en la zona occidental de la ciudad de Bogota</string>
    <string name="textmedallo">Punto de venta ubicado en la ciudad de Medellin</string>
    <string name="textmonte">Punto de venta ubicado en la ciudad de Monteria</string>
    <string name="textcali">Punto de venta ubicado en la ciudad de Cali</string>
    <string name="textdescrip">Tenemos a su dispocicion estos puntos de venta para su mayor comodidad y cercanias a su ciudad</string>
    <string name="btnBuscarMap">Buscar Mapa</string>
    <string name="imgMap1">map1</string>
    <string name="imgMap2">map2</string>
    <string name="imgMap3">map3</string>
    <string name="imgMap4">map4</string>
    <string name="imgMap5">map5</string>
    <string name="imgMap6">map6</string>
    <string name="imgMap7">map7</string>



</resources>