<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Sucursales">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imgAtrasSuc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/imgAtras"
                android:minHeight="48dp"
                app:srcCompat="@mipmap/atras" />

            <ImageView
                android:id="@+id/imgTituloSuc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/imgCarrito" />

            <TextView
                android:id="@+id/txtUsuSuc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnBogNor"
                    android:layout_width="102dp"
                    android:layout_height="87dp"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/textBogNor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:text="@string/textbognor" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnBogOccident"
                    android:layout_width="99dp"
                    android:layout_height="85dp"
                    tools:srcCompat="@tools:sample/avatars"
                    android:contentDescription="TODO" />

                <TextView
                    android:id="@+id/textBogOccident"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:text="@string/textbogocc" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnBogSur"
                    android:layout_width="99dp"
                    android:layout_height="83dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.37"
                    tools:layout_editor_absoluteX="47dp"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/textBogSur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:text="@string/textbogsur" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnCali"
                    android:layout_width="99dp"
                    android:layout_height="78dp"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/textCali"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:text="@string/textcali" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnMonter"
                    android:layout_width="100dp"
                    android:layout_height="89dp"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/textMonter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:text="@string/textmonte" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="105dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnMedallo"
                    android:layout_width="93dp"
                    android:layout_height="93dp"
                    android:layout_marginBottom="116dp"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/textMedallo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:text="@string/textmedallo" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:textSize="18dp"
                android:textColor="@color/teal_700"
                android:text="@string/textdescrip" />


        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>